--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,12 @@ voyageai = "^0.1.4"
 black = "^23.9.1"
 isort = "^5.12.0"
 
+
+[[tool.poetry.source]]
+name = "aliyun"
+url = "http://mirrors.aliyun.com/pypi/simple/"
+priority = "supplemental"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
